--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap");
+
 .input {
   width: 100%;
   padding: 30px;
@@ -27,6 +29,7 @@
 
 .text-result {
   width: 100%;
+  font-family: "Raleway", sans-serif;
   text-align: center;
   margin-top: 50px;
   padding: 30px;
