--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,6 @@
   overflow: hidden;
   /* element가 parent에서 벗어나지 못하게 */
   position: relative;
-  /* test */
-  border: solid black;
   font-family: "Raleway", sans-serif;
   margin-top: 50px;
   padding: 30px;
@@ -49,9 +47,25 @@
 .test-dot {
   z-index: 5;
   position: absolute;
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   /* 원으로 만들기 위해서 */
   border-radius: 9999px;
   background-color: #02343f;
+  animation: 0.9s ease forwards ripple-effect;
+}
+
+@keyframes ripple-effect {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(10);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(35);
+    opacity: 0;
+  }
 }
