--- a/src/component/PopupNotification.css
+++ b/src/component/PopupNotification.css
@@ -1,4 +1,6 @@
 .popup-notification {
+  /* 다른 element에 가려지지 않게 */
+  z-index: 10;
   animation: 1s forwards fade-in-out;
   position: absolute;
   /* 중앙정렬 */
